TAG: qcreports_db-6-0-22-5
DATE: 09/09/2022
STAFF: lec
wts2-977/Add SynGO annotation tracking to GO stats report

TAG: qcreports_db-6-0-22-4
DATE: 09/09/2022
STAFF: lec
wts2-976/Tweaks to GO Stats report

TAG: qcreports_db-6-0-22-3
TAG: qcreports_db-6-0-22-2
TAG: qcreports_db-6-0-22-1
DATE: 08/25/2022, 08/31/2022
STAFF: lec
wts2-761/MGD db cleanup - gxd vocabs -> voc_vocab/voc_term
wts2-761/use keys for Absent/Not Applicable query

TAG: qcreports_db-6-0-21-5
TAG: qcreports_db-6-0-21-4
DATE: 07/21/2022
STAFF: sc
wts2-944 created ondemand directory
converted the WTS2-673 customSQL report to an on demand QC report:
BIB_ArticlesByYear.csh/BIB_ArticlesByYear.py

TAG: qcreports_db-6-0-21-3
TAG: qcreports_db-6-0-21-2
DATE: 07/19/2022
STAFF: sc
wts2-896/crm-306
weekly/MRK_QTLCandidateGene.py

TAG: qcreports_db-6-0-21-1
DATE: 07/18/2022
STAFF: lec
wts2-938/Non-Recombinase allele with driver gene check
RECOMB_NoDriver.py

TAG: qcreports_db-6-0-20-2
DATE: 06/30/2022
STAFF: lec
wts2-918/Tweek for reporting invalid properties

TAG: qcreports_db-6-0-20-1
DATE: 06/27/2022
STAFF: lec
wts2-791/cell type annotations to obsolete CL terms/GXD_CellLine_Obsolete.sql

TAG: qcreports_db-6-0-18-14
DATE: 05/12/2022
STAFF: sc 
mgd/GXD_ChildExpNotParent.py - bug fix
WTS2-868 - something is scrambled on the GXD_ChildExpNotParent.rpt

TAG: qcreports_db-6-0-18-13
TAG: qcreports_db-6-0-18-12
DATE: 04/07/2022
STAFF: lec
fixed link to /data/loads/go/goamouse/output/pubmed.error

TAG: qcreports_db-6-0-18-11
TAG: qcreports_db-6-0-18-10
DATE: 04/06/2022
STAFF: lec
wts2-802/HT index custom & QC reports don't work with GEO primary ids
added logicaldb = 190
#       modified:   GXD_HTExpCuration.py
#       modified:   GXD_HTSampleGenotypeNA.py
#       modified:   GXD_HTSampleNoAge.sql
#       modified:   GXD_HTSampleNoStructure.py
#       modified:   GXD_HTSampleTheilerAge.py
wts2-792/QC for GXD & Cre: specimens/gel lanes lacking an age min/max
#       modified:   mgd/GXD_SpecNoAge.sql