@@ -174,6 +174,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_HTDistinctAge.sql.rpt">Distinct Age, AgeMin, AgeMax</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_HTSampleNoAge.sql.rpt">GXD HT Samples with incorrect age/age range values</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_HTSampleNoStructure.rpt">GXD HT Samples whose Relevance = Yes but the structure field is null</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GXD_HTExpPubMedID.sql.rpt">HT Experiments with PMIDs used by GXD</A>
 </OL>
 <A NAME="recomb"><B>Recombinase and Transgenic Reporter Data (mnk, cms)</B></A>
 <OL>
