@@ -1,3 +1,8 @@
+TAG: qcreports_db-6-0-22-6
+DATE: 10/04/2022
+STAFF: lec
+wts2-992/identify HT index experiments with associated PMID used by GXD in MasterBib
+
 TAG: qcreports_db-6-0-22-5
 DATE: 09/09/2022
 STAFF: lec
